# zx

./: .bazelignore  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: test.yml
bazel/: BUILD.bazel  googletest_bazel9.patch  zx_module.bzl
cmake/: ZxHelpers.cmake
core/include/zx/: type_traits.hpp
core/tests/: CMakeLists.txt
devlab/: CMakeLists.txt  devlab.cpp
docs/: BENCHMARKS_INDEX.md  BENCHMARKS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md
functional/: CMakeLists.txt
functional/tests/: CMakeLists.txt
include/zx/: zx.hpp
iterator/include/zx/: iterator_interface.hpp  iterator_range.hpp
iterator/tests/: iterator_interface.test.cpp
modules/ansi/: BUILD.bazel  CMakeLists.txt  README.md
modules/ansi/include/zx/: ansi.hpp  app.hpp  event.hpp  message_bus.hpp  string.hpp  surface.hpp  widget.hpp
modules/ansi/include/zx/ansi/widgets/: label.hpp  layout.hpp
modules/ansi/include/zx/detail/: terminal_backend.hpp  terminal_backend_base.hpp  terminal_backend_posix.hpp  terminal_backend_windows.hpp
modules/ansi/tests/: ansi.test.cpp  message_bus.test.cpp  surface.test.cpp
modules/arrays/: BUILD.bazel  CMakeLists.txt  README.md
modules/arrays/include/zx/: array.hpp
modules/arrays/tests/: array.test.cpp
modules/core/: BUILD.bazel  CMakeLists.txt  README.md
modules/core/include/zx/: algorithm.hpp  format.hpp  functions.hpp  iterator_range.hpp  maybe.hpp  result.hpp  source_location.hpp  string.hpp  string_vector.hpp  type_name.hpp  type_traits.hpp
modules/core/tests/: algorithm.test.cpp  format.test.cpp  functions.test.cpp  iterator_range.test.cpp  maybe.test.cpp  result.test.cpp  string.test.cpp  string_vector.test.cpp  type_name.test.cpp  type_traits.test.cpp
modules/functional/: BUILD.bazel  CMakeLists.txt  README.md
modules/functional/include/zx/: function_ref.hpp  functional.hpp  let.hpp  pipe.hpp
modules/functional/tests/: function_ref.test.cpp  functional.test.cpp  let.test.cpp  pipe.test.cpp
modules/geometry/: BUILD.bazel  CMakeLists.txt  README.md
modules/geometry/include/zx/: dcel.hpp  triangulation.hpp
modules/geometry/tests/: dcel.test.cpp
modules/images/: BUILD.bazel  CMakeLists.txt  README.md
modules/images/include/zx/: colors.hpp  image.hpp
modules/images/tests/: image.test.cpp
modules/iterator/: BUILD.bazel  CMakeLists.txt  README.md
modules/iterator/include/zx/: iterator_interface.hpp  iterator_range.hpp  strided_iterator.hpp
modules/iterator/tests/: CMakeLists.txt  iterator_interface.test.cpp  iterator_range.test.cpp
modules/mat/: BUILD.bazel  CMakeLists.txt  README.md
modules/mat/include/zx/: mat.hpp
modules/mat/include/zx/mat/: box_shape.hpp  linear_shape.hpp  math.hpp  matrix.hpp  polygonal_shape.hpp  spherical_shape.hpp  vector.hpp
modules/mat/tests/: box.test.cpp  box_shape.test.cpp  interval.test.cpp  linear_shape.test.cpp  mat.test.cpp  matchers.hpp  matrix.test.cpp  polygonal_shape.test.cpp  spherical_shape.test.cpp  vector.test.cpp
modules/mat2/: CMakeLists.txt
modules/mat2/include/zx/: md_array.hpp
modules/mat2/tests/: md_array.test.cpp
modules/maybe/: CMakeLists.txt
modules/maybe/include/zx/: maybe.hpp
modules/maybe/tests/: maybe.test.cpp
modules/nested_text/: BUILD.bazel  CMakeLists.txt  README.md
modules/nested_text/include/zx/: nested_text.hpp  nested_value_parser.hpp  nested_value_printer.hpp
modules/nested_text/include/zx/nested_text/: compare.hpp  node.hpp  parser.hpp  printer.hpp  serialization.hpp  value.hpp
modules/nested_text/tests/: nested_text.test.cpp  serialization.test.cpp
modules/predicates/: BUILD.bazel  CMakeLists.txt  README.md
modules/predicates/include/zx/: predicates.hpp
modules/predicates/tests/: predicates.test.cpp
modules/result/: CMakeLists.txt
modules/result/include/zx/: result.hpp
modules/result/tests/: result.test.cpp
modules/sequence/: BUILD.bazel  CMakeLists.txt  README.md
modules/sequence/benchmarks/: README.md  sequence.bench.cpp
modules/sequence/include/zx/: sequence.hpp
modules/sequence/tests/: sequence.test.cpp
modules/yield/: BUILD.bazel  CMakeLists.txt  README.md
modules/yield/include/zx/: yield.hpp
modules/yield/tests/: yield.test.cpp
scripts/: analyze_benchmarks.py  run_benchmarks.sh
tests/: CMakeLists.txt  benchmark.hpp  char32.test.cpp  format.test.cpp  functional.test.cpp  iterator_interface.test.cpp  iterator_range.test.cpp  matchers.hpp  maybe.test.cpp  predicates.test.cpp  result.test.cpp  sequence.test.cpp
