load("//bazel:zx_module.bzl", "zx_module", "zx_module_test")

zx_module(
    name = "images",
    deps = ["//modules/arrays:arrays"],
)

zx_module_test(
    name = "images_tests",
    module = ":images",
    srcs = ["tests/image.test.cpp"],
    data = ["tests/test-24.bmp"],
    defines = ["TEST_DATA_DIR=\\\"modules/images/tests\\\""],
    extra_copts = ["-Wno-error=conversion"],
)
