load("//bazel:zx_module.bzl", "zx_module", "zx_module_test")

zx_module(
    name = "mat",
    deps = [
        "//modules/core:core",
        "//modules/iterator:iterator",
    ],
)

zx_module_test(
    name = "mat_tests",
    module = ":mat",
    extra_copts = ["-iquote", "modules/mat/tests"],
    srcs = [
        "tests/matchers.hpp",
        "tests/vector.test.cpp",
        "tests/matrix.test.cpp",
        "tests/box_shape.test.cpp",
        "tests/linear_shape.test.cpp",
        "tests/interval.test.cpp",
        "tests/polygonal_shape.test.cpp",
        "tests/spherical_shape.test.cpp",
        "tests/mat.test.cpp",
    ],
)
