load("//bazel:zx_module.bzl", "zx_module", "zx_module_test")

zx_module(
    name = "sequence",
    deps = [
        "//modules/core:core",
        "//modules/iterator:iterator",
    ],
)

zx_module_test(
    name = "sequence_tests",
    module = ":sequence",
    srcs = ["tests/sequence.test.cpp"],
)
